Sat Jun 22 09:11:33 2013  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 4.7.5 (r8724)
	* test/minitest/*: ditto

Sat Jun 22 07:20:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_prof_set_heap_info, after_gc_sweep): call
	  gc_prof_set_heap_info() just after sweeping to calculate
	  live object number correctly.
	  (live object number = total generated number (before marking) -
                                total freed number (after sweeping))

	* gc.c (gc_marks): record `oldgen_object_count' into current profile`
	  record directly.

	* gc.c (rgengc_rememberset_mark): same for remembered_normal_objects
	  and remembered_shady_objects.

Sat Jun 22 06:46:04 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace::profile): rename rb_objspace::profile::record to
	  records (because it points a set of records) and add a field
	  rb_objspace::profile::current_record to point a current profiling
	  record.

	* gc.c: use above fields.

Sat Jun 22 06:05:36 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_giveup_promoted_writebarrier): remove `rest_sweep()'
	  because all of remembered objects are called for gc_mark_children().

Sat Jun 22 05:08:03 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rgengc_rememberset_mark): call gc_mark_children() for
	  remembered objects directly instead of pushing on the mark stack.

Sat Jun 22 04:48:53 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h (OBJ_WRITE): cast to (VALUE *) for second
	  parameter `slot'. You don't need to write a cast (VALUE *) any more.

	* class.c, compile.c, hash.c, iseq.c, proc.c, re.c, variable.c,
	  vm.c, vm_method.c: remove cast expressions for OBJ_WRITE().

Sat Jun 22 04:37:08 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (slot_sweep_body): rename to slot_sweep().
	  No need to separate major/minor GC.

	* gc.c (gc_setup_mark_bits): remove gc_clear_mark_bits() and unify to
	  this function.

Sat Jun 22 04:20:21 2013  Koichi Sasada  <ko1@atdot.net>
